--- a/pages/know-aime/knowAime.scss
+++ b/pages/know-aime/knowAime.scss
@@ -53,6 +53,7 @@
     display: flex;
     flex-wrap: wrap;
     padding: 2rem;
+    margin-top: 0;
 
     @supports (display: grid) {
       display: grid;
