--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -38,6 +38,7 @@ $purple: #9135F0;
 $magenta: #E82A9E;
 $watermelon: #FF6187;
 $pink: #FF91C5;
+$light-orange: #FF9835;
 $orange: #FFA235;
 $yellow: #FCC606;
 $green: #09CD7B;
