--- a/pages/fire-support/styles.module.scss
+++ b/pages/fire-support/styles.module.scss
@@ -212,6 +212,7 @@
     font-weight: 900;
     color: $black;
     font-size: 1.4rem;
+    line-height: 1.5em;
     margin: 0 auto 2em;
     padding: 0 2em;
     @media screen and (min-width: $md) {
