--- a/pages/positions/[positionId]/[jobCategory]/positionsEntry.scss
+++ b/pages/positions/[positionId]/[jobCategory]/positionsEntry.scss
@@ -2,6 +2,13 @@
 
 .job-hero {
   background:
-    url($cdnRoot+"assets/images/banner/Partner@2x-min.jpg") no-repeat
-    bottom center / cover #050301;
+    url($cdnRoot+"assets/images/banner/banner-pattern-blue.jpg") no-repeat
+    bottom center / cover $cyan;
+}
+
+.bannerContent .headingJobsSingle {
+  text-align: center;
+  strong {
+    left: initial;
+  }
 }
