--- a/pages/positions/[positionId]/[jobCategory]/positionsEntry.scss
+++ b/pages/positions/[positionId]/[jobCategory]/positionsEntry.scss
@@ -16,3 +16,10 @@
 .headingJobContent {
   margin: 1.5em 0 0.5em;
 }
+
+.backToOpps {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  padding: 2em 0 1em;
+}
