--- a/hocs/basicLayout.scss
+++ b/hocs/basicLayout.scss
@@ -13,7 +13,7 @@
 @import '../styles/component/table';
 @import '../styles/component/loading';
 @import '../styles/component/progress-bar';
-@import '../styles/component/article-tile';
+// @import '../styles/component/article-tile';
 @import '../styles/component/tags';
 @import '../styles/component/scratch-svg';
 @import '../styles/component/hero-banner';
