--- a/pages/positions/[positionId]/positionsEntry.scss
+++ b/pages/positions/[positionId]/positionsEntry.scss
@@ -8,8 +8,14 @@
 
 .bannerContent .headingJobsSingle {
   text-align: center;
+  letter-spacing: -0.15em;
+  margin-top: 3em;
   strong {
     left: initial;
+    letter-spacing: -0.15em;
+    @media screen and (min-width: $md) {
+      top: initial;
+    }
   }
 }
 
