--- a/pages/reports/reports.modules.scss
+++ b/pages/reports/reports.modules.scss
@@ -1,5 +1,15 @@
 @import "../../styles/base/variables";
 
+.heroBannerReports {
+  display: flex;
+  min-height: 71vh;
+  text-align: center;
+  margin-bottom: 2rem;
+  flex-direction: column;
+  justify-content: center;
+  background: url($cdnRoot + 'assets/images/banner/bg-pattern-purple@2x.jpg') no-repeat top center / cover #050301;
+}
+
 .reportsContainer {
   margin: 0 auto;
   padding-top: 0;
