--- a/components/storiesComponents/storyCategorySelector/storyCategorySelector.module.scss
+++ b/components/storiesComponents/storyCategorySelector/storyCategorySelector.module.scss
@@ -1,3 +1,37 @@
+@import "../../../styles/base/variables";
+
 .storyCategorySelectorContainer {
-  // your styles here
+  .tabContainer {
+    display: inline-block;
+    button.tab  {
+      background-color: $white; 
+      /* Secondary/AIME Watermelon */
+      color: $watermelon;
+      border: 1px solid $watermelon;
+      box-sizing: border-box;
+      border-radius: 3px;
+      margin: 0 2em 2em 0;
+  
+      &.activeTab {
+        background-color: $watermelon;
+        color: $white;
+      }
+      span.tabText {
+        font-family: $body-font-family;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+      }
+    }
+  }
+
+
+
+
 }
