Feature: Use tabs instead of checkboxes.

--- a/components/storiesComponents/storyCategorySelector/storyCategorySelector.module.scss
+++ b/components/storiesComponents/storyCategorySelector/storyCategorySelector.module.scss
@@ -3,7 +3,8 @@
 .storyCategorySelectorContainer {
   .tabContainer {
     display: inline-block;
-    button.tab  {
+    
+    .tab  {
       background-color: $white; 
       /* Secondary/AIME Watermelon */
       color: $watermelon;
@@ -11,18 +12,27 @@
       box-sizing: border-box;
       border-radius: 3px;
       margin: 0 2em 2em 0;
-  
+      min-width: 16em;
+
+      &.allTab {
+        min-width: 8em;
+      }
+
       &.activeTab {
         background-color: $watermelon;
         color: $white;
+        .tabText {
+          font-weight: bold;
+        }
       }
+      
       span.tabText {
+        width: 100%;
         font-family: $body-font-family;
         font-style: normal;
         font-weight: normal;
         font-size: 14px;
         line-height: 16px;
-        display: flex;
         align-items: center;
         text-align: center;
         letter-spacing: 2px;
