--- a/components/storiesComponents/badgeList/badgeList.module.scss
+++ b/components/storiesComponents/badgeList/badgeList.module.scss
@@ -2,12 +2,12 @@
 
 .badge {
   font-family: $body-font-family;
-  font-size: .75em;
   letter-spacing: 1.75px;
   text-transform: uppercase;
   position: absolute;
-  padding: .6em 1.25em;
   background: $white;
-  margin: .5em;
   border-radius: 1em;
+  font-size: .65em; 
+  padding: .6em 1em 0.5em 1.25em; 
+  margin: .5em; 
 }
