--- a/components/storiesComponents/badgeList/badgeList.module.scss
+++ b/components/storiesComponents/badgeList/badgeList.module.scss
@@ -1,13 +1,20 @@
 @import "../../../styles/base/variables";
 
 .badge {
-  font-family: $body-font-family;
-  letter-spacing: 1.75px;
-  text-transform: uppercase;
   position: absolute;
   background: $white;
   border-radius: 1em;
-  font-size: .65em; 
-  padding: .6em 1em 0.5em 1.25em; 
   margin: .5em; 
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5em;
+  vertical-align: middle;
+}
+
+.badgeLabel {
+  font-family: $body-font-family;
+  font-size: .65em; 
+  letter-spacing: 1.75px;
+  text-transform: uppercase;
 }
