Fixes story script

--- a/pages/story/story.module.scss
+++ b/pages/story/story.module.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/base/variables";
+@import "../../styles/base/variables";
 
-@import "../../../styles/baseClasses/materialIcons";
+@import "../../styles/baseClasses/materialIcons";
 
 .bannerInStory {
   background-position: 0% 25%;
